# backup

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
backup-build/: Dockerfile
backup-cli/: .travis.yml  Cargo.toml  README.md  config-example.yml
backup-cli/src/: client.rs  file_scanner.rs  main.rs
backup-cli/src/configuration/: mod.rs  yaml_reader.rs
backupd/: .travis.yml  Cargo.toml  README.md  config-example.yml  database.sqlite
backupd/src/: lib.rs  main.rs  server.rs  storage.rs
backupd/src/configuration/: mod.rs  yaml_reader.rs
backupd/src/storage/: mod.rs
backupd/src/storage/sqlite_db/: mod.rs  model.rs  schema.rs
backupd/tests/: server_tests.rs
backuplib/: .travis.yml  Cargo.toml  README.md  build.rs
backuplib/protos/: baacup.proto
backuplib/src/: client.rs  lib.rs  rpc.rs  server.rs  storage.rs
backuplib/src/proto/: mod.rs
