[package]
name = "backup-cli"
version = "0.1.0"
authors = ["Isaac Lozano <109lozanoi@gmail.com>"]
edition = "2018"

[dependencies]
backuplib = { path = "../backuplib" }
clap = "2.33.0"
futures = "~0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tokio = "0.1"
walkdir = "2.2"
shellexpand = "1.0.0"
