[package]
name = "backupd"
version = "0.1.0"
authors = ["Isaac Lozano <109lozanoi@gmail.com>"]
edition = "2018"

[dependencies]
backuplib = { path = "../backuplib" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
futures = "0.1"
tokio = "0.1"
diesel = { version = "1.4", features = ["sqlite"] }
uuid = { version = "0.7", features = ["v4"] }
